# CppProjectTemplate

./: .clang-tidy  CMakeLists.txt
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  CalculatorBenchmark.cpp
build-release/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build-release/benchmarks/: Makefile  benchmarks  cmake_install.cmake
build-release/examples/: Makefile  cmake_install.cmake  example
build-release/src/: Makefile  cmake_install.cmake
examples/: CMakeLists.txt  example.cpp
scripts/: ci_setup_clang.sh
src/: CMakeLists.txt  Calculator.cpp  Calculator.h
tests/: CMakeLists.txt  testCalculator.cpp
